# contextual-bandits

./: .gitignore  README.md  pyproject.toml
contextual_bandits/: __init__.py
contextual_bandits/algorithms/: base.py  linucb.py  neural_bandit.py
contextual_bandits/utils/: preprocessing.py
examples/: generate_data.py  run_simulation.py
